--- a/styles/style.css
+++ b/styles/style.css
@@ -177,3 +177,58 @@ header {
 }
   
 /* Write your CSS below */
+
+@media only screen and (max-width: 760px) {
+  body {
+      font-size: 14px; 
+      background-color: #f0f0f0; 
+  }
+
+  .container {
+    flex-direction: column;
+      width: 100%;
+      padding: 0 10px;
+  }
+
+  .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .navbar a {
+      display: block;
+      padding: 10px;
+  }
+
+  .article {
+    width: 100%; 
+    flex-direction: column;
+  }
+
+
+  @media only screen and (min-width: 760px) and (max-width: 1024px) {
+    body {
+        font-size: 14px; 
+        background-color: #f0f0f0; 
+    }
+  
+    .container {
+      flex-direction: column;
+        width: 100%;
+        padding: 0 10px;
+    }
+  
+    .navbar {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+  
+    .navbar a {
+        display: block;
+        padding: 10px;
+    }
+  
+    .article {
+      width: 100%; 
+      flex-direction: row;
+    }
